ilk islem yapildi

--- a/src/2-Html5/div-span.html
+++ b/src/2-Html5/div-span.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Div ve Span</title>
+	<title>ilk değişiklik</title>
 </head>
 <body>
 	
@@ -18,8 +18,9 @@
 		</p>
 	</div>	
 	
+	
 	<div id="menu">
-		menu
+		<p> menu</p>
 	</div>
 	
 	<div id="content">içerik</div>
