--- a/src/2-Html5/images.html
+++ b/src/2-Html5/images.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Images</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-	
-	
-	<img src="img/fred.png" width="100" alt="Fred">
-	
-	<img src="img/wilma.gif" width="100" alt="wilma">
-	
-	
-	<img src="https://galeri.uludagsozluk.com/19/fred-cakmaktas_81545_m.jpg">
-	
+    
+    <img src="images/sokak.jpeg" alt="sokak resmi">
+    <!-- <img src="sokak.jpeg" alt="sokak resmi"> -->
+    <!-- <img src="../images/sokak.jpeg" alt="sokak resmi"> -->
+    <img src="https://www.w3schools.com/html/img_girl.jpg" alt="" width="200">
+
+
 </body>
 </html>
